--- a/_titlepage.tex
+++ b/_titlepage.tex
@@ -24,7 +24,7 @@
 		\vspace{14mm}
 		% Titel
 		\noindent \huge{\
-		  Robotik in der Altenpflege: Ethische Überlegungen zur sozialen Interaktion.
+		  Ethische Überlegungen zu sozial interagierenden Robotern und die Integration in Altenheimen
 		}
 		\vspace{60mm}	
 	\end{center}
