--- a/it-ethik.tex
+++ b/it-ethik.tex
@@ -55,6 +55,6 @@
 %\chapter{Anhang}    
 % ERKLÄRUNG
 %\includepdf[pages=-]{Studienprotokoll.pdf}
-%\input{_eidversicherung}
+\input{_eidversicherung}
 
 \end{document}
