--- a/kapitel1.tex
+++ b/kapitel1.tex
@@ -1,8 +1,6 @@
 \chapter{Einleitung}
 \label{ch:einleitung}
-Die  Konversationen  rund  um  das  Thema  Pflegerobotik  sind  in  den  letzten  Jahren  merklich  häufiger  geworden.  Dies  liegt  einerseits  daran,  dass  das  Gesundheitswesen  mit  Herausforderungen  konfrontiert  ist,  für  die  dringend  innovative  Lösungen  benötigt  werden.  Dazu  zählen  die  demografische  Entwicklung  und  der  Mangel  an  Fachkräften.  Andererseits  werden  von  Robotikherstellern  und  Universitäten  vermehrt  Projekte  vorgestellt, welche einen Nutzen für die Praxis vorweisen können. Im folgenden wird der Einsatz sozial interagierender Roboter in der Altenpflege durchleuchtet. Dabei wird in \ref{sec:values} auf die Wechselwirkung zwischen Werten und Design eingegangen. In Sektion \ref{sec:täuschung} wird eine ethische Reflektion zum Thema der Täuschung im bereich der Robotik dargelegt. Fragen der Privatheit die diesbezüglich auftauchen werden in \ref{sec:priv} behandelt. Anschließend werden Bedenken bisheriger Ansätze geäußert.
-
-
+Die Auseinandersetzung mit dem Thema Pflegerobotik hat in den letzten Jahren sowohl im öffentlichen Diskurs als auch in der wissenschaftlichen Literatur zugenommen. Dies liegt einerseits daran, dass das Gesundheitswesen mit Herausforderungen konfrontiert ist, für die eine innovative Herangehensweise am wahrscheinlichsten Lösungen verspricht. Zu den Herausforderungen zählen sowohl die demografische Entwicklung als auch der Mangel an Fachkräften. Andererseits werden von Herstellern und Universitäten vermehrt Projekte vorgestellt, welche einen Nutzen für die Praxis vorweisen können. Im folgenden wird der Einsatz sozial interagierender Roboter in der Altenpflege diskutiert. Dabei wird in \ref{sec:values} auf die Wechselwirkung zwischen Design und Werten eingegangen. In Abschnitt \ref{sec:täuschung} wird eine ethische Reflektion zum Thema der Täuschung im Bereich der Robotik dargelegt. Fragen der Privatheit, die diesbezüglich auftauchen werden in \ref{sec:priv} behandelt. Anschließend werden Bedenken bisheriger Ansätze zusammengefasst.
 
 
 
